# myapp-blog

./: .gitignore  .pylintrc  README.md  ReadMe.md  app.json  app.yaml  config.py  dummy_records.py  index.yaml  main.py  pyproject.toml  requirements.txt  wsgi.py
app/: server.py
app/database/: config.py  dummyrecords.py  setup.py
app/handlers/: base.py  delete_comment.py  delete_post.py  dislike.py  edit_comment.py  edit_post.py  home.py  like.py  my_post.py  new_post.py  permalink.py  setting.py  sign_in.py  sign_out.py  sign_up.py  welcome.py
app/helpers/: helper.py
app/static/css/: custom-styles.css
app/templates/: base.html  edit-comment.html  edit-post.html  error.html  home.html  my-post.html  new-post.html  permalink.html  setting.html  sign-in.html  sign-up.html  welcome.html
blog/: __init__.py  extensions.py  forms.py  models.py  utils.py  views.py
blog/handlers/: base.py  delete_comment.py  delete_post.py  dislike.py  edit_comment.py  edit_post.py  home.py  like.py  my_post.py  new_post.py  permalink.py  setting.py  sign_in.py  sign_up.py  static_file.py  welcome.py
blog/static/css/: custom-styles.css  custom2.css
blog/static/js/: custom-scripts.js
blog/static/scripts/: index.js
blog/static/styles/: index.css
blog/templates/: 400.html  404.html  500.html  base.html  comment.html  edit-comment.html  edit-post.html  error.html  header.html  home.html  layout.html  my-post.html  new-post.html  permalink.html  post.html  posts.html  saved-posts.html  setting.html  sign-in.html  sign-up.html  user.html  view-post.html  welcome.html
blog/templates/partials/: header.html  messages.html  posts.html
database/: blog.db  blog.db.default
handlers/: setting.py  signup.py
helper/: helper.py
models/: comment.py  post.py  user.py
secret/: secret.py
static/css/: style.css
template/: base.html  editcomment.html  editpost.html  error.html  home.html  mypost.html  newpost.html  permalink.html  setting.html  signin.html  signup.html  welcome.html
