[tool.poetry]
name = "myapp-blog"
version = "1.1.0"
description = "A simple multi user blog where users can sign in and post blog posts as well as 'Like' and 'Comment' on other posts made on the blog."
authors = ["kaushalmeena <kaushal.meena1996@gmail.com>"]
readme = "ReadMe.md"
repository = "https://github.com/kaushalmeena1996/myapp-blog"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^2.7"
sqlalchemy = "^1.3.16"
webapp2 = "^2.5.2"
jinja2 = "^2.11.2"
WebOb = "^1.8.6"
Paste = "^3.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[tool.poetry.scripts]
dev = "app.server:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
