[tool.poetry]
name = "myapp-blog"
version = "1.0.0"
description = "A simple multi user blogging site where users can sign in, post blog posts and as well as 'Like' and 'Comment' on other posts made on the blog."
authors = ["kaushalmeena <kaushal.meena1996@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kaushalmeena/myapp-blog"
packages = [
    { include = "blog" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-Compress = "^1.10.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^1.0.0"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[tool.poetry.scripts]
start = "wsgi:start"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
