[tool.poetry]
name = "myapp-blog"
version = "1.0.0"
description = "A simple multi user blogging site where users can sign in, post blog posts and as well as 'Like' and 'Comment' on other posts made on the blog."
authors = ["kaushalmeena <kaushal.meena1996@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kaushalmeena/myapp-blog"
packages = [
    { include = "blog" }
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Flask-Compress = "^1.14"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
Flask-SQLAlchemy = "^3.1.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"

[tool.poetry.scripts]
start = "wsgi:start"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
